--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "bookmarks",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3",
-    "typescript": "4.4.4"
-  }
+    "name": "bookmarks",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^0.1.1",
+        "@radix-ui/react-id": "^0.1.1",
+        "@radix-ui/react-popover": "^0.1.1",
+        "@radix-ui/react-separator": "^0.1.1",
+        "@radix-ui/react-tabs": "^0.1.1",
+        "@stitches/react": "^1.2.5",
+        "@supabase/supabase-js": "^1.27.0",
+        "next": "12.0.3",
+        "nprogress": "^0.2.0",
+        "react": "^17.0.2",
+        "react-dom": "17.0.2",
+        "scheduler": "^0.20.2",
+        "uuid": "^8.3.2",
+        "zustand": "^3.6.5"
+    },
+    "devDependencies": {
+        "@types/node": "16.11.7",
+        "@types/nprogress": "^0.2.0",
+        "@types/react": "17.0.34",
+        "@types/uuid": "^8.3.3",
+        "eslint": "7.32.0",
+        "eslint-config-next": "12.0.3",
+        "typescript": "4.4.4"
+    }
 }
